--- a/Index.html
+++ b/Index.html
@@ -1888,4 +1888,4 @@
         }
 
         function saveData() {
-            localStorage.setItem('inventory', JSON.stringify(invento
+            localStorage.setItem('inventory', JSON.stringifyinventory)
